# brain-loop-ai

./: .gitignore  AGENTS.md  README.md  package.json  tsconfig.json  turbo.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: agent_thread.rs  approval.rs  atomic.rs  brain.rs  direct_model.rs  harness.rs  landing.rs  launchagent.rs  lib.rs  lock.rs  main.rs  orchestration.rs  project_setup.rs  pty.rs  runner.rs  scheduler.rs  state.rs  worktree.rs
brain/: AI_PROMPT_RULES.md  AI_WORKFLOW.md  BRAIN.md  PROJECT_INDEX.md  SYSTEM_OVERVIEW.md  progress.md
brain/api/: contracts.md  endpoints.md  permissions.md
brain/database/: migrations.md  relationships.md  schema.md
brain/decisions/: 0001-midday-tauri-desktop.md  0002-use-portable-pty-for-terminal.md  2026-06-12-launchagent-v2-deferral.md  2026-06-15-brain-loop-state-root-and-settings-toml.md  2026-06-15-direct-model-provider-runners.md  2026-06-15-product-name-runner-terminology.md  2026-06-15-project-landing-policy.md  2026-06-15-provider-event-ingestion.md  2026-06-15-queue-dependency-scheduling-contract.md  2026-06-16-project-brain-onboarding-policy.md
brain/engineering/: ai-rules.md  coding-standards.md  repo-structure.md
brain/features/: approval-broker.md  automation-runs.md  background-scheduler.md  brain-state.md  orchestration.md  project-configuration.md  queue-dashboard.md  threaded-terminals.md  ui-shell.md
brain/product/: roadmap.md  (+2 more)
(+173 files in other folders)
