[package]
name = "brain-loop-desktop"
version = "0.1.0"
description = "Brain Loop desktop app"
authors = ["Brain Loop"]
edition = "2021"

[lib]
name = "brain_loop_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
